queries for user and repository

--- a/docker/gunicorn/Dockerfile
+++ b/docker/gunicorn/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 WORKDIR /srv/gis
 COPY app/ ./
 
-# CMD gunicorn -b 0.0.0.0:8000 -w 2 gis:app
+CMD gunicorn -b 0.0.0.0:8000 -w 2 api:app
